apps/jitsi/templates/jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb
spec:
  selector:
    app: jitsi-jvb
  ports:
    - port: 9090
      targetPort: 9090
      name: http-jvb
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb-nodeport
spec:
  selector:
    app: jitsi-jvb
  ports:
    - port: 50000
      targetPort: 50000
      nodePort: 50000
      name: jvb-rtp
      protocol: UDP
    - port: 54443
      targetPort: 54443
      nodePort: 54443
      name: jvb-ws
      protocol: TCP
  type: NodePort
