apps/jitsi/templates/prosody-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-prosody
spec:
  selector:
    app: jitsi-prosody
  ports:
    - port: 5222
      targetPort: 5222
      name: prosody-client
      protocol: TCP
    - port: 5347
      targetPort: 5347
      name: prosody-external
      protocol: TCP
    - port: 5280
      targetPort: 5280
      name: http-prosody-private
      protocol: TCP
  type: ClusterIP
