apps/jitsi/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
spec:
  selector:
    app: jitsi-web
  ports:
    - port: 80
      targetPort: 80
      name: http-web
      protocol: TCP
    - port: 443
      targetPort: 443
      name: https-web
      protocol: TCP
  type: ClusterIP
